@@ -1,4 +1,6 @@
-JVM 通过 *垃圾收集-GC* 自动管理内存堆中对象内存的分配和回收。JVM 通常采用**分代垃圾收集器**，以便于整理内存碎片。分代垃圾收集器就是基于对象不同生命周期，将堆分成不同的内存区域，然后组合使用不同的垃圾收集算法，可简单认为分为两部分组成：
+JVM 通过 *垃圾收集-GC* 自动管理内存堆中对象内存的分配和回收。JVM 通常采用**分代垃圾收集器**，以便于整理内存碎片。分代垃圾收集器就是基于对象不同生命周期，将堆分成不同的
+
+内存区域，然后组合使用不同的垃圾收集算法，可简单认为分为两部分组成：
 
 - *Young Generation*：年轻代，由*Eden*和两个相等的*Survivor*空间组成，其中一个Survivor始终为空，用来复制Minor GC后在Eden和另一个Survivor存活的对象。
 - *Old Generation*：老年代，对象生命周期比较长。
@@ -14,7 +16,6 @@ JVM 通过 *垃圾收集-GC* 自动管理内存堆中对象内存的分配和回
  - *Reference counting*，**引用计数法**，不能解决循环引用。
  - *Escape analysis*，**逃逸分析**，可以将堆分配转为栈分配，动态编译优化手段，减轻GC压力。
 
-
 - **采用何种方式进行回收**，垃圾收集算法：
 
  - *Copying*，复制，将存活对象从一块内存复制到另一块内存，不产生内存碎片，由于要保留一个空的备份内存，所以空间利用率较低。
@@ -24,11 +25,13 @@ JVM 通过 *垃圾收集-GC* 自动管理内存堆中对象内存的分配和回
 
 ## 内存分配
 
-对象实例首先在 Eden 区分配，为了快速分配，Hotspot JVM 采用的是一种 *bump-the-pointer* 的**线性分配**方法。分配时一般都有大块连续内存可用，此方法就是检查剩余内存是否足够，给对象分配内存，然后更新指针偏移量和初始化对象。
+对象实例首先在 Eden 区分配，为了快速分配，Hotspot JVM 采用的是一种 *bump-the-pointer* 的**线性分配**方法。分配时一般都有大块连续内存可用，此方法就是检查剩余内存是否足
 
+够，给对象分配内存，然后更新指针偏移量和初始化对象。
 
-线性分配效率固然高，但对多线程程序来说，分配内存的操作必须是线程安全的。可以使用全局锁但会影响性能，Hotspot JVM 采用的是一种 *Thread-Local Allocation Buffers (TLABs)* 的方法，为每个线程分配一个缓冲区，当TLAB满了，再加锁去申请，在线程内部就能使用*bump-the-pointer*，进而提高分配的吞吐量。
+线性分配效率固然高，但对多线程程序来说，分配内存的操作必须是线程安全的。可以使用全局锁但会影响性能，Hotspot JVM 采用的是一种 *Thread-Local Allocation Buffers (TLABs)* 
 
+的方法，为每个线程分配一个缓冲区，当TLAB满了，再加锁去申请，在线程内部就能使用*bump-the-pointer*，进而提高分配的吞吐量。
 
 分配内存时，一些大对象有可能直接在老年代分配，在年轻代经过几轮Minor GC存活，达到一定年龄的对象，会被提升复制到老年代。
 
@@ -41,11 +44,7 @@ Hotspot JVM 自JDK 6u23开始支持逃逸分析，采用 *Tracing GC* 追踪堆�
 - 类引用类型静态成员变量
 - JNI 本地方法局部变量，参数和JNI 全局引用
 
-
-
 需要注意*GC roots*是一组**对象引用**而不是**引用对象**。
-
-
 
 Hotspot JVM 提供了多个垃圾收集器让分代收集器组合使用：
 
@@ -65,29 +64,30 @@ Hotspot JVM 提供了多个垃圾收集器让分代收集器组合使用：
  - *CMS, Concurrent Mark Sweep*，低停顿，采用*标记清除算法*，会有内存碎片，Java堆空间需求比较大，*CMS*
  - *G1, Garbage-First*，相比CMS，压缩内存，
 
-
-
 常用JVM参数指定GC组合：
 
-- –XX:+UseSerialGC：Serial + Serial Old
-- –XX:+UseParNewGC：ParNew + Serial Old
-- –XX:+UseParallelGC：Parallel Scavenge + Serial Old
-- –XX:+UseParallelOldGC：Parallel Scavenge + Parallel Old
-- –XX:+UseConcMarkSweepGC：ParNew + CMS + Serial Old
+- -XX:+UseSerialGC：Serial + Serial Old
+- -XX:+UseParNewGC：ParNew + Serial Old
+- -XX:+UseParallelGC：Parallel Scavenge + Serial Old
+- -XX:+UseParallelOldGC：Parallel Scavenge + Parallel Old
+- -XX:+UseConcMarkSweepGC：ParNew + CMS + Serial Old
 - -XX:+UseG1GC：G1
 
 
 ### 64位JVM 默认配置，以JDK 8为例
 
-
 使用命令`java -XX:+PrintFlagsFinal -version`或者`jmap -heap <pid>`可以查看默认配置。
 
+JVM堆最小为物理内存的 1/64，64位至少2G，即最小32M；最大为物理内存的 1/4，如128G内存，默认JVM最大32G，可以使用`-Xms`和`-Xmx`指定初始和最大大小。年轻代默认比例为`-
 
-JVM堆最小为物理内存的 1/64，64位至少2G，即最小32M；最大为物理内存的 1/4，如128G内存，默认JVM最大32G，可以使用`-Xms`和`-Xmx`指定初始和最大大小。年轻代默认比例为`-XX:NewRatio=2`，即占总堆的 1/3，Survivor空间比例为`-XX:SurvivorRatio=8`，即每个Survivor占Eden的 1/8，因为有两个，所以占年轻代的 1/10。
+XX:NewRatio=2`，即占总堆的 1/3，Survivor空间比例为`-XX:SurvivorRatio=8`，即每个Survivor占Eden的 1/8，因为有两个，所以占年轻代的 1/10。
 
-JDK 8 默认垃圾收集器是ParallelOldGC，其默认打开AdaptiveSizePolicy，自适应调整各种参数，需要手动指定`-XX:SurvivorRatio=8`才能让这个配置生效。比如指定堆大小为270M，那么个区域大小如下：
+JDK 8 默认垃圾收集器是ParallelOldGC，其中Parallel Scavenge默认打开AdaptiveSizePolicy，自适应调整各种参数，默认的SurvivorRatio 配置需要手动指定才能生效。比如指定堆大小
+
+为270M，那么各区域大小如下：
 
 
+### 永久代
 
 
 ## 参考
@@ -98,4 +98,3 @@ JDK 8 默认垃圾收集器是ParallelOldGC，其默认打开AdaptiveSizePolicy�
 - [JEP 122: Remove the Permanent Generation](http://openjdk.java.net/jeps/122)
 - [Java HotSpot VM Options](http://www.oracle.com/technetwork/java/javase/tech/vmoptions-jsp-140102.html)
 - [String.intern in Java 6, 7 and 8 – string pooling](http://java-performance.info/string-intern-in-java-6-7-8/)
- 
